Disable memcheck on iCubTorqueEstimationIntegrationTest due to https://github.com/robotology/idyntree/issues/367

--- a/src/tests/integration/CMakeLists.txt
+++ b/src/tests/integration/CMakeLists.txt
@@ -14,6 +14,16 @@ macro(add_integration_test testname)
     endif()
 endmacro()
 
+macro(add_integration_test_no_valgrind testname)
+    set(testsrc ${testname}IntegrationTest.cpp)
+    set(testbinary ${testname}IntegrationTest)
+    set(testtarget   IntegrationTest${testname})
+    add_executable(${testbinary} ${testsrc})
+    target_include_directories(${testbinary} PRIVATE ${IDYNTREE_TREE_INCLUDE_DIRS} ${EIGEN3_INCLUDE_DIR})
+    target_link_libraries(${testbinary} idyntree-core idyntree-model idyntree-modelio-urdf idyntree-high-level idyntree-sensors idyntree-estimation)
+    add_test(NAME ${testtarget} COMMAND ${testbinary})
+endmacro()
+
 macro(add_integration_exe testname)
     set(testsrc ${testname}IntegrationTest.cpp)
     set(testbinary ${testname}IntegrationTest)
@@ -25,7 +35,9 @@ endmacro()
 
 add_integration_test(Dynamics)
 add_integration_test(DenavitHartenberg)
-add_integration_test(iCubTorqueEstimation)
+
+# See issue https://github.com/robotology/idyntree/issues/367
+add_integration_test_no_valgrind(iCubTorqueEstimation)
 
 # Until we fix it, add DynamicsLinearization test but don't execute it
 add_integration_exe(DynamicsLinearization)
