--- a/src/high-level/tests/CMakeLists.txt
+++ b/src/high-level/tests/CMakeLists.txt
@@ -7,6 +7,10 @@ macro(add_unit_test_hl classname)
     target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR} ${IDYNTREE_TREE_INCLUDE_DIRS})
     target_link_libraries(${testbinary} idyntree-core idyntree-model idyntree-high-level idyntree-modelio-urdf)
     add_test(NAME ${testname} COMMAND ${testbinary})
+    
+    if(IDYNTREE_RUN_VALGRIND_TESTS)
+        add_test(NAME memcheck_${testname} COMMAND ${MEMCHECK_COMMAND_COMPLETE} ./${testbinary})
+    endif()
 endmacro()
 
 # todo
