Correctly mark toEigen method for spatial helpers as const to avoid subtle bugs

--- a/src/core/tests/CMakeLists.txt
+++ b/src/core/tests/CMakeLists.txt
@@ -28,3 +28,25 @@ add_unit_test(EigenHelpers)
 add_unit_test(Rotation)
 add_unit_test(EigenSparseHelpers)
 add_unit_test(TransformFromMatrix4x4)
+
+# We have also some usages of the API that we want to make sure that do not compile
+macro(add_compilation_error_test name)
+    set(testsrc ${name}CompilationErrorTest.cpp)
+    set(testbinary ${name}CompilationErrorTest)
+    set(testname   CompilationErrorTest${name})
+
+    # Inspired from  https://stackoverflow.com/questions/30155619/expected-build-failure-tests-in-cmake
+    add_executable(${testbinary} ${testsrc})
+    set_target_properties(${testbinary} PROPERTIES EXCLUDE_FROM_ALL TRUE
+                                                   EXCLUDE_FROM_DEFAULT_BUILD TRUE)
+    target_include_directories(${testbinary} PRIVATE ${EIGEN3_INCLUDE_DIR})
+    target_link_libraries(${testbinary} idyntree-core)
+
+    add_test(NAME ${testname}
+             COMMAND ${CMAKE_COMMAND} --build . --target ${testbinary} --config $<CONFIGURATION>
+             WORKING_DIRECTORY ${CMAKE_BINARY_DIR})
+    set_tests_properties(${testname} PROPERTIES WILL_FAIL TRUE)
+
+endmacro()
+
+add_compilation_error_test(SpatialToEigen)
