Fix CMake of tests of optimal control library

--- a/src/optimalcontrol/tests/CMakeLists.txt
+++ b/src/optimalcontrol/tests/CMakeLists.txt
@@ -17,8 +17,8 @@ add_executable(ConstraintsGroupTest ConstraintsGroupTest.cpp)
 target_link_libraries(ConstraintsGroupTest PRIVATE idyntree-optimalcontrol ${iDynTree_LIBRARIES})
 
 
-add_test(NAME ConstraintsGroup
-        COMMAND ${PROJECT_NAME})
+add_test(NAME ConstraintsGroupTest
+        COMMAND ConstraintsGroupTest)
 
 
 add_executable(RK4Test RK4Test.cpp)
@@ -27,4 +27,4 @@ target_link_libraries(RK4Test PRIVATE idyntree-optimalcontrol ${iDynTree_LIBRARI
 
 
 add_test(NAME RK4Test
-         COMMAND ${PROJECT_NAME})
+         COMMAND RK4Test)
