Added test for FT sensors processing in reduced models

--- a/src/sensors/tests/CMakeLists.txt
+++ b/src/sensors/tests/CMakeLists.txt
@@ -13,5 +13,9 @@ macro(add_unit_test classname)
     endif()
 endmacro()
 
+idyntree_enable_cxx11()
+
 add_unit_test(SensorsList)
 add_unit_test(ThreeAxisForceTorqueContactSensor)
+add_unit_test(ReducedModelWithFT)
+target_link_libraries(ReducedModelWithFTUnitTest idyntree-high-level)
