--- a/bindings/python/tests/CMakeLists.txt
+++ b/bindings/python/tests/CMakeLists.txt
@@ -5,3 +5,4 @@ add_custom_command(TARGET copy_python_tests_in_build PRE_BUILD
                    ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR})
 
 add_test(NAME PythonGeometryTests COMMAND ${PYTHON_EXECUTABLE} geometry.py)
+add_test(NAME PythonJointTests COMMAND ${PYTHON_EXECUTABLE} joints.py)
