Added copy of span from GSL.
Require C++14 to compile iDynTree.

Require CMake 3.5 .

Fix Travis to compile C++14.

Support only Visual Studio 2015 and 2017 in AppVeyor

See discussion in https://github.com/robotology/idyntree/issues/447

--- a/src/core/tests/CMakeLists.txt
+++ b/src/core/tests/CMakeLists.txt
@@ -31,6 +31,7 @@ add_unit_test(Rotation)
 add_unit_test(EigenSparseHelpers)
 add_unit_test(TransformFromMatrix4x4)
 add_unit_test(CubicSpline)
+add_unit_test(Span)
 
 
 # We have also some usages of the API that we want to make sure that do not compile
