--- a/src/optimalcontrol/CMakeLists.txt
+++ b/src/optimalcontrol/CMakeLists.txt
@@ -32,7 +32,9 @@ set(PUBLIC_HEADERS include/iDynTree/OptimalControl.h
                    include/iDynTree/LinearConstraint.h
                    include/iDynTree/Controller.h
                    include/iDynTree/TimeRange.h
-                   include/iDynTree/ConstraintsGroup.h)
+                   include/iDynTree/ConstraintsGroup.h
+                   include/iDynTree/OptimizationProblem.h
+                   include/iDynTree/Optimizer.h)
 set(INTEGRATORS_PUBLIC_HEADERS include/iDynTree/Integrators/FixedStepIntegrator.h
                                include/iDynTree/Integrators/RK4.h
                                include/iDynTree/Integrators/ImplicitTrapezoidal.h)
@@ -57,7 +59,9 @@ set(SOURCES src/DynamicalSystem.cpp
             src/RK4.cpp
             src/ImplicitTrapezoidal.cpp
             src/TimeRange.cpp
-            src/ConstraintsGroup.cpp)
+            src/ConstraintsGroup.cpp
+            src/OptimizationProblem.cpp
+            src/Optimizer.cpp)
 
 add_library(${libraryname} ${PUBLIC_HEADERS} ${INTEGRATORS_PUBLIC_HEADERS} ${SOURCES})
 target_include_directories(${libraryname} SYSTEM PUBLIC ${EIGEN3_INCLUDE_DIR})
