[GravComp] Porting GravityCompensationHelper class from codyco-modules to iDynTree/Estimation

--- a/src/estimation/CMakeLists.txt
+++ b/src/estimation/CMakeLists.txt
@@ -17,7 +17,8 @@ set(IDYNTREE_ESTIMATION_HEADERS include/iDynTree/Estimation/BerdyHelper.h
                                 include/iDynTree/Estimation/BerdySparseMAPSolver.h
                                 include/iDynTree/Estimation/SchmittTrigger.h
                                 include/iDynTree/Estimation/ContactStateMachine.h
-                                include/iDynTree/Estimation/BipedFootContactClassifier.h)
+                                include/iDynTree/Estimation/BipedFootContactClassifier.h
+                                include/iDynTree/Estimation/GravityCompensationHelpers.h)
 
 set(IDYNTREE_ESTIMATION_PRIVATE_INCLUDES )
 
@@ -28,7 +29,8 @@ set(IDYNTREE_ESTIMATION_SOURCES src/BerdyHelper.cpp
                                 src/BerdySparseMAPSolver.cpp
                                 src/SchmittTrigger.cpp
                                 src/ContactStateMachine.cpp
-                                src/BipedFootContactClassifier.cpp)
+                                src/BipedFootContactClassifier.cpp
+                                src/GravityCompensationHelpers.cpp)
 
 SOURCE_GROUP("Source Files" FILES ${IDYNTREE_ESTIMATION_SOURCES})
 SOURCE_GROUP("Header Files" FILES ${IDYNTREE_ESTIMATION_HEADERS})
