Added MultipleShootingTest. Some bugs solved consequently.

--- a/src/optimalcontrol/tests/CMakeLists.txt
+++ b/src/optimalcontrol/tests/CMakeLists.txt
@@ -19,5 +19,4 @@ if (IDYNTREE_USES_IPOPT)
     add_oc_test(Optimizer)
 endif()
 add_oc_test(OCProblem)
-#add_oc_test(MultipleShooting) it must be finished
-
+add_oc_test(MultipleShooting)
