--- a/src/optimalcontrol/tests/CMakeLists.txt
+++ b/src/optimalcontrol/tests/CMakeLists.txt
@@ -17,6 +17,7 @@ add_oc_test(ConstraintsGroup)
 add_oc_test(Integrators)
 if (IDYNTREE_USES_IPOPT)
     add_oc_test(Optimizer)
+    add_oc_test(OptimalControlIpopt)
 endif()
 add_oc_test(OCProblem)
 add_oc_test(MultipleShooting)
