Added test for a linear OC problem with OSQP. Some bugs to be solved.
Some other already solved.

--- a/src/optimalcontrol/tests/CMakeLists.txt
+++ b/src/optimalcontrol/tests/CMakeLists.txt
@@ -21,3 +21,9 @@ if (IDYNTREE_USES_IPOPT)
     add_oc_test(Optimizer)
     add_oc_test(OptimalControlIpopt)
 endif()
+
+if (OC_USE_OSQP)
+    add_oc_test(LinearOCOsqp)
+endif()
+
+
