[travis] Fix travis by using both YARP and ICUB from devel branch
As of 2018/06/15, YARP master is not compatible with ICUB master, see https://github.com/robotology/QA/issues/300

--- a/.travis.yml
+++ b/.travis.yml
@@ -109,6 +109,7 @@ before_script:
   # Build YARP 
   - git clone https://github.com/robotology/yarp
   - cd yarp
+  - git checkout devel 
   - mkdir build
   - cd build 
   - cmake -G"${TRAVIS_CMAKE_GENERATOR}" -DCREATE_LIB_MATH:BOOL=ON -DCMAKE_BUILD_TYPE=${TRAVIS_BUILD_TYPE} ..
@@ -118,6 +119,7 @@ before_script:
   # Build ICUB
   - git clone https://github.com/robotology/icub-main
   - cd icub-main
+  - git checkout devel 
   - mkdir build
   - cd build 
   - cmake -G"${TRAVIS_CMAKE_GENERATOR}" -DCMAKE_BUILD_TYPE=${TRAVIS_BUILD_TYPE} ..
