--- a/src/sensors/CMakeLists.txt
+++ b/src/sensors/CMakeLists.txt
@@ -17,6 +17,7 @@ include_directories(${IDYNTREE_TREE_INCLUDE_DIRS})
 set(IDYNTREE_SENSORS_HEADERS include/iDynTree/Sensors/AllSensorsTypes.h
                              include/iDynTree/Sensors/Sensors.h
                              include/iDynTree/Sensors/SixAxisForceTorqueSensor.h
+                             include/iDynTree/Sensors/SixAxisFTSensor.h
                              include/iDynTree/Sensors/GyroscopeSensor.h
                              include/iDynTree/Sensors/AccelerometerSensor.h
                              include/iDynTree/Sensors/ThreeAxisAngularAccelerometerSensor.h
